2003-06-23  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* doc/babel.1: Update with current command-line options and file
	formats.

	* doc/FAQ.html, doc/Migration.html: Use HTML versions from the
	website rather than text versions.

	* doc/Makefile.in, doc/Makefile.am: Update accordingly.
	
2003-06-22  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* src/main.cpp: Updated to use OBMolVector for importing multiple
	molecules in a file. Emulates behavior of babel, but improvements
	are needed. (e.g. some formats like separators if it's a
	multi-molecule file.) Also added -f (first) and -l (last)
	flags to pick particular molecules. Fixes feature request
	PR#575243.

	* src/molvector.h, src/molvector.cpp: Add new PushMol method for
	adding new molecules to the end of the vector. Improve Write
	support and clean up overloaded methods--instead use default
	values.

	* src/*.txt: Updated copyright information.
	* src/*.cpp, src/*.h: Ditto. (As needed)

2003-06-15  Michael Banck  <mbanck@gmx.net>

	* src/pdb.cpp (WritePDB): Cast atom->GetValence() to int to avoid
	signed/unsigned comparison.
	* src/ring.cpp (OBRingSearch::RemoveRedundant): Remove register
	attribute for i and j to suppress a warning.
	(OBRingSearch::AddRingFromClosure): Remove unused parameter 
	`int level'.
	* src/ring.h (AddRingFromClosure): Remove unused parameter `int'.  
	* src/povray.cpp (OutputMoleculeBonds): Remove unused parameter
	`OpenBabel::OBMol mol'.

2003-06-15  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	Updated to latest autoconf, libtool, automake versions to fix a
	few minor bugs and add libtool-1.5 Mac OS X support.

	* depcomp, ltmain.sh, missing, config.guess, config.sub: Update
	with latest GNU versions.
	
	* src/Makefile.am: Remove main.cpp from targets for library and
	make sure only one set of headers exists.

	* configure: Regenerated with autoreconf.
	* */Makefile.in: Regenerated with autoreconf.
	
	* openbabel.pc.in: Fix minor typo.
